@@ -2,4 +2,5 @@ name: TB Mega Menu
 type: module
 description: 'Megamenu solutions for Drupal.'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: TB
