@@ -1,3 +1,7 @@
+The Better Mega Menu 8.x-1.0-dev, 2020-09-11
+--------------------------------------------
+- Issue #3149011 by Project Update Bot, themodularlab: Automated Drupal 9 compatibility fixes
+
 The Better Mega Menu 8.x-1.0-dev, 2020-08-24
 --------------------------------------------
 - Issue #3002715 by i_g_wright, themodularlab, mellowtothemax: Admin permissions
